--- a/TLC_Gpe_14_README.tex
+++ b/TLC_Gpe_14_README.tex
@@ -87,6 +87,25 @@
 	\end{lstlisting}
 	Dans le programme principal, les méthodes de cette classe pourront donc être appelées grâce à la classe Call qui contiendra toutes les informations relatives à l'appel. Ensuite l'interpréteur cherchera l'objet dans la table des symboles et à partir de celui-ci on pourra accéder à la méthode de sa classe et donc exécuter l'instruction.
 	\section{Choix de structuration}
+	Pour la structuration, la grammaire va lire instruction par instruction comme détaillé précédemment. Les classes seront donc regroupés en plusieurs classes "majeures" Classe, Expression et Instruction. Les autres classes sont des spécificités de celles-ci et héritent donc de ces dernières. 
 	\section{Jeux d'essais}
+	\begin{table}[!h]
+		\begin{center}
+		\begin{tabular}{|c|c|}
+			\hline
+			\textbf{Nom du fichier} & \textbf{Fonctionnalité illustrée}\\
+			\hline
+			fichier 1 & fonctionnalité\\
+			\hline
+			fichier 1 & fonctionnalité\\
+			\hline
+			fichier 1 & fonctionnalité\\
+			\hline
+			fichier 1 & fonctionnalité\\
+			\hline
+		\end{tabular}
+		\end{center}
+		\caption{Description des jeux d'essais}
+	\end{table}
 \end{document}
 	
